[tool.poetry]
name = "test_project"
version = "0.1.0"
description = ""
authors = ["jack <jlester8@student.gsu.edu>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
